[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UpgradesScene/objUpgradeTab.gd" type="Script" id=1]
[ext_resource path="res://Assets/FactoryEntity/Structure/Processor/img_workbench.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buttons/UI/img_craft_nine.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/UI/img_tab_down.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UpgradesScene/upgradesTheme.tres" type="Theme" id=5]

[node name="objUpgradeTab" type="NinePatchRect"]
margin_right = 960.0
margin_bottom = 128.0
rect_min_size = Vector2( 960, 128 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 128 )
patch_margin_left = 37
patch_margin_top = 53
patch_margin_right = 64
patch_margin_bottom = 58
script = ExtResource( 1 )

[node name="btnExpand" type="TouchScreenButton" parent="."]
position = Vector2( 832, 0 )
normal = ExtResource( 4 )

[node name="ctnTitle" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_right = 397.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texIcon" type="TextureRect" parent="ctnTitle"]
margin_right = 64.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 0 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="labEntityName" type="Label" parent="ctnTitle"]
margin_left = 68.0
margin_top = 35.0
margin_right = 377.0
margin_bottom = 92.0
theme = ExtResource( 5 )
text = "Workbench"

[node name="ctnTabInfo" type="TabContainer" parent="."]
margin_left = 20.0
margin_top = 108.0
margin_right = 940.0
margin_bottom = 472.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Process" type="Tabs" parent="ctnTabInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 24.0
margin_right = -876.0
margin_bottom = -308.0

[node name="Output" type="Tabs" parent="ctnTabInfo"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 24.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Secondary" type="Tabs" parent="ctnTabInfo"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 24.0
margin_right = -4.0
margin_bottom = -4.0

[node name="twnExpandTab" type="Tween" parent="."]
[connection signal="released" from="btnExpand" to="." method="_on_btnExpand_released"]
